syntax = "proto3";
package common;
option go_package = "github.com/story-engine/main-service/proto/common";

// Pagination request
message PaginationRequest {
  int32 limit = 1;
  int32 offset = 2;
}

// Error details
message ErrorDetail {
  string code = 1;
  string message = 2;
  map<string, string> metadata = 3;
}

